--- a/src/app/shared/components/configuration/import-settings/import-settings.component.scss
+++ b/src/app/shared/components/configuration/import-settings/import-settings.component.scss
@@ -20,10 +20,6 @@
     padding-bottom: 8px;
   }
 
-  &--mapping-section {
-    min-height: 98px;
-  }
-
   &--mapping-qbo-fyle-section {
     width: 633.5px;
   }
